# python-project-83

./: .gitignore  Makefile  README.md  build.sh  database.sql  pyproject.toml
.github/workflows/: README.md  lint.yml
page_analyzer/: __init__.py  app.py  db.py  validator.py
page_analyzer/templates/: base.html  index.html  urls.html  urls_id.html
